cmake_minimum_required(VERSION 3.27)
project(Sorting_Algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(Sorting_Algorithms
        BubbleSort.cpp
        forpython.cpp
        InsertionSort.cpp
        MergeSort.cpp
        MergeSortIIterative.cpp
        MergeSortIterative2.cpp
        OptmBubbleSort.cpp
        pbPlots.cpp
        Plot.cpp
        Plotter.cpp
        SelectionSort.cpp
        supportLib.cpp
        tempCodeRunnerFile.cpp)

include_directories(/Users/rivindukariyawasam/Library/Caches/Homebrew/downloads/)
